# calibrate-backend

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Calibrate_Architecture.pptx  Calibrate_Evaluators_DataModel.pptx  ENV.md  INTEGRATION_TESTING.md  README.md  SELF_HOSTING.md  SETUP_SDK.md  docker-compose.yml  openapi.json  pyproject.toml
.githooks/: pre-commit
.speakeasy/: workflow.yaml
.specstory/: statistics.json
fern/: README.md  generators.yml  openapi-overrides.yml  sdk-README.md
openapi/: overlay.yaml
scripts/: apply_api_doc_style.py  check_api_docs_style.py  check_public_api_error_docs.py  export_openapi.py  lint.sh
src/: .env.example  annotation_eval_runner.py  annotation_metrics.py  api_errors.py  dataset_utils.py  db.py  eval_common.py  job_recovery.py  llm_judge.py  main.py  pagination.py  provider_status.py  utils.py
tests/: test_agent_test_helpers.py  test_annotation_advanced.py  test_annotation_eval_run_endpoints.py  test_annotation_eval_run_job.py  test_annotation_eval_runner.py  test_annotation_metrics.py  test_api_docs_style.py  test_api_errors.py  test_auth_utils.py  test_cli_auth_patch.py  test_dataset_utils.py  test_db.py  test_export_openapi.py  test_fake_calibrate_agent.py  test_fake_matches_real_usage.py  test_invariant_calibrate_cli.py  test_invariant_s3_helpers.py  test_invariant_subprocess_session.py  test_invariant_utc_datetime.py  test_job_recovery.py  test_llm_judge.py  test_main_and_routers.py  test_main_extra.py  test_multitenant_access.py  test_pagination.py  test_patch_goreleaser_config.py  test_router_extras.py  test_routers_agent_tests.py  test_routers_agents.py  test_routers_annotation.py  test_routers_annotation_tasks.py  test_routers_evaluators.py  test_routers_organizations.py  test_routers_public.py  test_routers_simulations.py  test_routers_stt_tts.py  test_routers_tests.py  test_routers_tools.py  test_run_tasks.py  (+5 more)
(+45 files in other folders)
