[project]
name = "calibrate-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6,<0.122.0",
    "uvicorn>=0.40.0",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.5",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "calibrate-agent>=0.0.59",
    "bcrypt>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
    "vulture>=2.14",
    "pylint>=3.3.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Unused and dead code only. Style/formatting/modernization rules are
# deliberately not enabled — they'd flag thousands of pre-existing lines
# without catching the class of bug this gate exists for.
select = ["F", "B007", "RUF059", "ARG"]

[tool.ruff.lint.per-file-ignores]
# Test doubles take arguments they never read, to match the real signature.
"tests/*" = ["ARG"]

[tool.pylint.main]
disable = ["all"]
enable = ["duplicate-code"]

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true
ignore-signatures = true

[tool.vulture]
paths = ["src"]
min_confidence = 80

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src"]
branch = true
# src/testing holds the integration-testing fake CLI. It only runs under
# FAKE_AI_PROVIDERS and then as a subprocess, so in-process coverage can't see
# it — it's exercised end-to-end by tests/test_fake_calibrate_agent.py instead.
omit = ["*/tests/*", "src/testing/*"]

[tool.coverage.report]
omit = ["*/tests/*", "src/testing/*"]
